tests/miniJava/neg/003813_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( public 0 ) { } else { } } }
